--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -1,9 +1,10 @@
+/** Main Area **/
 body {
   margin: 0;
   padding: 0;
   background-image: url("../imgs/volcano.jpg");
 }
- 
+/** Navigation Bar **/
 .nav ul {
   list-style: none;
   background-color: rgba(255, 0, 0, 0.5);
@@ -19,40 +20,35 @@ body {
   height: 40px;
   border-bottom: 1px solid #888;
 }
- 
 .nav a {
   text-decoration: none;
   color: #fff;
   display: block;
   transition: .3s background-color;
 }
- 
 .nav a:hover {
   background-color: #484848;
 }
- 
 .nav a.active {
   background-color: #fff;
   color: #444;
   cursor: default;
 }
- 
+/** Window Size **/
 @media screen and (min-width: 600px) {
   .nav li {
-    width: 120px;
-    border-bottom: none;
-    height: 50px;
-    line-height: 50px;
-    font-size: 1.4em;
-  }
- 
-  /* Option 1 - Display Inline */
-  .nav li {
+  width: 120px;
+  border-bottom: none;
+  height: 50px;
+  line-height: 50px;
+  font-size: 1.4em;
+}
+/* Option 1 - Display Inline */
+.nav li {
     display: inline-block;
     margin-right: -4px;
-  }
- 
-  /* Options 2 - Float
+}
+/* Options 2 - Float
   .nav li {
     float: left;
   }
