--- a/css/introStyle.css
+++ b/css/introStyle.css
@@ -1,7 +1,9 @@
 body {
-    margin: 0;    
+    margin: 0;
+    
     color: snow;
-    background-color: black;    
+    background-color: black;
+    
     background-image:url("../imgs/vBack.jpg");
 	background-repeat:no-repeat;
 	background-size: cover;
@@ -19,7 +21,7 @@ body {
     width: 100%;   
 }
 
-header {
+.introHeader {
     position: fixed;
     top: 50%;
     
