--- a/css/navStyle.css
+++ b/css/navStyle.css
@@ -1,6 +1,6 @@
 .nav ul {
   list-style: none;
-  background-color: rgba(255, 0, 0, 0.5);
+  background-color: rgba(0,0,0,0.5);
   /*background-color: #FF0000;*/
   text-align: center;
   padding: 0;
