--- a/css/introStyle.css
+++ b/css/introStyle.css
@@ -1,12 +1,14 @@
-.overlayColor {
-    position: fixed;
-    z-index: 1;
-    height: 100%;
+.subtext {
+    -webkit-text-stroke-width: 0.1px;
+    -webkit-text-stroke-color: black;
+    color: rgba(255, 255, 255, 0.8);
+    text-size-adjust: auto;
+    text-align: center;
+    font-size: 1em;
+    text-align: center;
     width: 100%;
-    
-    animation-name: fadeInBlack;
-    animation-duration: 3s;
-    animation-iteration-count: 1;
+    margin: 0 auto;
+    background-color: rgba(0,0,0,.4);
 }
 
 .background-image {
@@ -36,7 +38,7 @@
 }
 
 .img-about {
-    background-image: url("../imgs/v2.jpg");
+    background-image: url("../imgs/v4.jpg");
 }
 
 .img-contact {
@@ -44,23 +46,25 @@
 }
 
 .introHeader {
+    color: rgba(255, 131, 44, 1);
     position: fixed;
-    top: 50%;
-    
+    top: 50%;    
     width: 100%;
     text-align: center;
-    background-color: rgba(0,0,0,.1);
     font-size: 3em;
 }
 
-/* ### ANIMATION ### */
-
-@keyframes fadeInBlack{
-    from {
-        background-color: rgba(0,0,0,1);
-    }
-    
-    to {
-        background-color: rgba(0,0,0,0);
-    }
+/** Video Background **/
+.fullscreen-bg {
+    overflow: hidden;
+    position: fixed;
+    z-index: -100;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    top: 0;
+}
+.fullscreen-bg__video {
+    position: absolute;
+    top: 0;
 }
