--- a/css/navStyle.css
+++ b/css/navStyle.css
@@ -1,48 +1,66 @@
 .nav ul {
-  list-style: none;
-  background-color: rgba(0,0,0,0.5);
-  /*background-color: #FF0000;*/
-  text-align: center;
-  padding: 0;
-  margin: 0;
+    background-color: rgba(0,0,0,.8);
+    text-align: center;
+    list-style: none;
+    padding: 5px;
+    margin: 0;
 }
 .nav li {
-  font-family: 'Baloo Tamma', cursive;
-  font-size: 1.2em;
-  line-height: 40px;
-  height: 40px;
-  border-bottom: 1px solid #888;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    font-family: 'Baloo Tamma', cursive;
+    border-bottom: 1px solid #888;
+    margin-right: 10px;
+    margin-left: 10px;
+    line-height: 40px;
+    font-size: 1.2em;
+    height: 40px;
 }
- 
 .nav a {
-  text-decoration: none;
-  color: #fff;
-  display: block;
-  transition: .3s background-color;
+    transition: .3s background-color;
+    text-decoration: none;
+    display: block;
+    color: #fff;
+    border-radius: .5em;
 }
- 
 .nav a:hover {
-  background-color: #484848;
+  background-color: rgb(255, 131, 44);
 }
- 
 .nav a.active {
   background-color: #fff;
-  color: #444;
   cursor: default;
+  color: #444;
 }
- 
-@media screen and (min-width: 600px) {
-  .nav li {
-    width: 120px;
-    border-bottom: none;
-    height: 50px;
-    line-height: 50px;
-    font-size: 1.4em;
-  }
- 
-  /* Option 1 - Display Inline */
-  .nav li {
-    display: inline-block;
-    margin-right: -4px;
-  }
+
+.companyLogo {
+    background-color: rgba(0,0,0,.8);
+    width: 100%;
+    text-align: center;
+    top: 0;
+    padding: .5em;
+    font-size: 2em;
+}
+
+/** Window Size **/
+@media (min-width: 600px) {
+    .companyLogo {
+        position: fixed;
+        width: auto;
+        background-color: rgba(0,0,0,.0);
+        top: 0;
+        padding: .5em;
+        font-size: 1.5em;
+    }
+    
+    .nav li {
+        border-bottom: none;
+        line-height: 50px;
+        font-size: 1.4em;
+        width: 120px;
+        height: 50px;
+    }
+    /* Option 1 - Display Inline */
+    .nav li {
+        display: inline-block;
+        margin-right: -4px;
+    }
 }
