--- a/css/contactStyle.css
+++ b/css/contactStyle.css
@@ -1,6 +1,6 @@
 /** Container **/
 #contactContainer {
-  	text-align: center;
+    text-align: center;
     background-color: rgba(0,0,0,.8);
     
     max-width: 800px;
@@ -8,19 +8,19 @@
     padding: 1em;
     border-radius: 1em;
 }
-
-p class="contact" {
-	font-size:25px;
-	line-height:30px;
-	box-shadow: 15px 30px 5px #888888
-	text-align: center;
+/** Paragraph **/
+p .contact {
+    font-size:25px;
+    line-height:30px;
+    box-shadow: 15px 30px 5px #888888;
+    text-align: center;
 }
 
-/** Fieldset borders **/
+/** Fieldset Border **/
 .fieldset {
-	border: none;
+    border: none;
 }
-
+/** Social Buttons **/
 .socialButtons {
     padding: .5em;
     
@@ -29,4 +29,12 @@ p class="contact" {
 .socialButtons a {
     margin:  4%;
     color: transparent;
+}
+/** Text and Button Color **/
+input {
+    color: black;
+}
+
+button {
+    color: black;
 }
