--- a/css/introStyle.css
+++ b/css/introStyle.css
@@ -1,23 +1,24 @@
+/** Subtext **/
 .subtext {
     -webkit-text-stroke-width: 0.1px;
     -webkit-text-stroke-color: black;
+    background-color: rgba(0,0,0,.4);
     color: rgba(255, 255, 255, 0.8);
     text-size-adjust: auto;
     text-align: center;
     font-size: 1em;
-    text-align: center;
-    width: 100%;
     margin: 0 auto;
-    background-color: rgba(0,0,0,.4);
+    width: 100%;
 }
 
+/** Background Area **/
 .background-image {
-    margin: 0;
     background-color: black;
+    margin: 0;
     
-	background-repeat:no-repeat;
-	background-size: cover;
 	background-attachment: fixed;
+    background-repeat:no-repeat;
+    background-size: cover;
     filter: blur(2px);
     
     background-position: 50% 0%;    
@@ -33,6 +34,7 @@
     width: 100%;    
 }
 
+/** Background Images **/
 .img-main {
     background-image: url("../imgs/vm1.gif");
 }
@@ -45,13 +47,14 @@
     background-image: url("../imgs/v5.jpg");
 }
 
+/** Header **/
 .introHeader {
-    color: rgba(255, 131, 44, 1);
-    position: fixed;
-    top: 50%;    
-    width: 100%;
+    color: rgba(255, 131, 44, 0.8);
     text-align: center;
-    font-size: 3em;
+    position: fixed;
+    font-size: 8vmin;
+    width: 100%;
+    top: 80%;
 }
 
 /** Video Background **/
@@ -64,6 +67,7 @@
     left: 0;
     top: 0;
 }
+
 .fullscreen-bg__video {
     position: absolute;
     top: 0;
