--- a/css/navStyle.css
+++ b/css/navStyle.css
@@ -1,3 +1,4 @@
+/** Navigation Bar **/
 .nav ul {
     background-color: rgba(0,0,0,.8);
     text-align: center;
@@ -30,7 +31,7 @@
   cursor: default;
   color: #444;
 }
-
+/** Company Logo **/
 .companyLogo {
     background-color: rgba(0,0,0,.8);
     width: 100%;
@@ -50,7 +51,7 @@
         padding: .5em;
         font-size: 1.5em;
     }
-    
+    /** Navigation Size **/
     .nav li {
         border-bottom: none;
         line-height: 50px;
@@ -58,7 +59,7 @@
         width: 120px;
         height: 50px;
     }
-    /* Option 1 - Display Inline */
+    /** Display Inline **/
     .nav li {
         display: inline-block;
         margin-right: -4px;
